change hover color for contact owner button

--- a/frontend/src/components/Profile/PetProfile.css
+++ b/frontend/src/components/Profile/PetProfile.css
@@ -83,3 +83,7 @@
     text-transform: none;
 }
 
+.contact-owner-button.MuiButton-contained:hover {
+    background-color: #F9C983;
+    box-shadow: none;
+}
