--- a/frontend/src/components/Search/PetProviderSearch.css
+++ b/frontend/src/components/Search/PetProviderSearch.css
@@ -18,9 +18,27 @@
   height: 77px;
   left: 20px;
   position: relative;
-  margin-top: 55px;
+  margin-top: 95px;
   margin-bottom: 40px;
   width: 325px;
+}
+
+.pet-provider-search-arrow {
+  height: 11px;
+  left: 11px;
+  position: absolute;
+  top: 11px;
+  width: 14px;
+}
+
+.pet-provider-search-arrow-overlap-group7 {
+  background-image: url(../../../static/img/rectangle-26-1.svg);
+  background-size: 100% 100%;
+  height: 34px;
+  left: 24px;
+  position: absolute;
+  top: 56px;
+  width: 36px;
 }
 
 .pet-provider-search-explore {
