--- a/frontend/src/components/Login/Login.css
+++ b/frontend/src/components/Login/Login.css
@@ -57,6 +57,7 @@ input[type="password"] {
   padding: 10px;
   border: 2px solid #f9c983;
   font-size: 16px;
+  width: 100%;
 }
 
 input::placeholder {
