--- a/frontend/src/components/HomePage/HomePage.css
+++ b/frontend/src/components/HomePage/HomePage.css
@@ -95,10 +95,10 @@
   background-color: #f9c8837d;
   border-radius: 10px;
   height: 45px;
-  left: 309px;
+  left: 280px;
   position: absolute;
   top: 40px;
-  width: 36px;
+  width: 10%;
 }
 
 .home-page-screen-location {
