--- a/frontend/src/components/Profile/ProviderProfile.css
+++ b/frontend/src/components/Profile/ProviderProfile.css
@@ -3,7 +3,7 @@
     margin-bottom: 5%;
     margin-left: 4%;
     height: 100vh;
-        justify-content: space-between;
+    justify-content: space-between;
 }
 
 .provider-picture {
@@ -68,7 +68,7 @@
 }
 
 .provider-name h1 {
-    margin-top: 1vh;
+    margin-top: 2vh;
     margin-bottom: 0px;
     font-weight: 800 !important;
     font-size: 3vh;
@@ -76,7 +76,7 @@
 }
 
 .provider-rate h1 {
-    margin-top: 1vh;
+    margin-top: 2vh;
     margin-bottom: 0px;
     margin-left: auto;
     display: flex;
@@ -104,6 +104,7 @@
 
 .info-row {
     display: flex;
+    margin-top: 2vh;
 }
 
 .info-row h3 {
@@ -151,4 +152,16 @@
 .contact-provider-button.MuiButton-contained:hover {
     background-color: #F9C983;
     box-shadow: none;
+}
+
+body {
+    font-family: 'Nunito', sans-serif;
+    font-weight: 400;
+    padding-bottom: 20vh;
+}
+
+h1,
+h3,
+p {
+    margin-bottom: 17px;
 }
