--- a/frontend/src/components/Appointments/Appointments.css
+++ b/frontend/src/components/Appointments/Appointments.css
@@ -369,7 +369,7 @@
     width: 36px;
 }
 
-.appointments-arrow {
+.appointments-arrow2 {
     height: 11px;
     left: 10px;
     position: absolute;
