--- a/frontend/src/components/User/SignUp.css
+++ b/frontend/src/components/User/SignUp.css
@@ -1,53 +1,59 @@
 .SignUpPage {
-    max-width: 500px;
-    margin: 0 auto;
-    padding: 20px;
+  max-width: 500px;
+  margin: 0 auto;
+  padding: 20px;
+}
+.SignUpTitle {
+  font-size: 1.4rem;
+  margin-top: 1.6rem;
+  margin-bottom: -10px;
 }
 
 .form-group {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 15px;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 15px;
 }
 
 label {
-    margin-bottom: 5px;
-    font-weight: 600;
+  margin-bottom: 5px;
+  font-weight: 600;
 }
 
 input[type="text"],
 input[type="email"],
 input[type="password"] {
-    padding: 10px;
-    border: 2px solid #f9c983;
-    font-size: 16px;
+  padding: 10px;
+  border: 2px solid #f9c983;
+  font-size: 16px;
 }
 
 input::placeholder {
-    color: #f9c983;
+  color: #f9c983;
 }
 
 button[type="submit"] {
-    background-color: #f9c983;
-    color: #fff;
-    padding: 10px 0;
-    border: none;
-    border: 2px solid #f9c983;
-    border-radius: 1.1vh;
-    font-size: 16px;
-    font-weight: 800;
-    cursor: pointer;
-    width: 100%;
+  background-color: #f9c983;
+  color: #fff;
+  padding: 10px 0;
+  border: none;
+  border: 2px solid #f9c983;
+  border-radius: 1.1vh;
+  font-size: 16px;
+  font-weight: 800;
+  cursor: pointer;
+  width: 100%;
+  margin-top: 40px;
 }
 
 button[type="submit"]:hover {
-    background-color: #e0b66c;
+  background-color: #e0b66c;
 }
 
 @media only screen and (min-width: 768px) {
-    .SignUpPage {
-        max-width: 100%;
-        padding: 50px;
-        text-align: left;
-    }
+  .SignUpPage {
+    max-width: 100%;
+    padding: 50px;
+    text-align: left;
+  }
 }
